--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fav-icon.png" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Allura&family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+      </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Vite + React</title>
+    <title>Weldaid | Trading & Contracting</title>
   </head>
   <body class="bg-[#FFFFE6] font-uncut-sans">
     <div id="root"></div>
